--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Reversi (Othello)</h1>
+    <h1>Reversi</h1>
     
     <div id="status-container">
         <p>Jogador Atual: <span id="current-player-text">Preto</span></p>
@@ -33,3 +33,4 @@
 </body>
 
 </html>
+
